src/test/programs/errors/throw_uncaught.bas
#procedure
sub Main()
    throw 1, "hello"
end sub
--output--
Error
1
hello
